--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/009/a/index.xhtml
@@ -202,7 +202,7 @@
 													<abbr data-bind="attr:{'title': getTitle}"><span class="months-input" data-bind="text: itemName" /></abbr>
 												</td>
 												<td class="input-units-2">
-												    <com:ko-if bind ="(categoryType === 3) &amp; (index === 2) ">
+												    <com:ko-if bind ="(categoryType === 3) &amp; (indexItem === 2) ">
 													<div id="combo-box"
 														data-bind="ntsComboBox: {
 														options: listComboItem,
@@ -219,7 +219,7 @@
 													</div>
 													</com:ko-if>
 													
-												    <com:ko-if bind ="(categoryType === 3) &amp; (index !== 2) ">
+												    <com:ko-if bind ="(categoryType === 3) &amp; (indexItem !== 2) ">
 													<div id="combo-box"
 														data-bind="ntsComboBox: {
 														options: listComboItem,
@@ -228,7 +228,7 @@
 														optionsText: 'name',
 														editable: false,
 														visibleItemsCount: 5,
-														enable: false,
+														enable: true,
 														dropDownAttachedToBody:true,
 														columns: [
 															{ prop: 'name', length: 10 },
@@ -236,7 +236,7 @@
 													</div>
 													</com:ko-if>
 																										
-												    <com:ko-if bind ="[ 1, 2, 3, 4, 5, 6, undefined].indexOf(categoryType) >  -1 ">
+												    <com:ko-if bind ="[ 1, 2, 4, 5, 6, undefined].indexOf(categoryType) >  -1 ">
 													<div id="combo-box"
 														data-bind="ntsComboBox: {
 														options: listComboItem,
