[Update] Add switch tab feature (working in progress)

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
@@ -380,6 +380,7 @@
 											</div>
 											<div tabindex="130" class="tab-a9">
 												<div class="tab-outline" data-bind="ntsKMK003A9: { 
+													selectedTab: selectedTab,
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -388,6 +389,7 @@
 											</div>
 											<div tabindex="136" class="tab-a10">
 												<div class="tab-outline" data-bind="ntsKMK003A10: {
+													selectedTab: selectedTab,
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -396,14 +398,16 @@
 											</div>
 											<div tabindex="138" class="tab-a11">
 												<div class="tab-outline" data-bind="ntsKMK003A11: {
+													selectedTab: selectedTab,
 													screenMode: tabMode,
 													model: mainSettingModel,
-													enum: settingEnum
+													enum: settingEnum													
 												}">
 												</div>
 											</div>
 											<div tabindex="149" class="tab-a12">
 												<div class="tab-outline" data-bind="ntsKMK003A12: { 
+													selectedTab: selectedTab,
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -412,6 +416,7 @@
 											</div>
 											<div tabindex="152" class="tab-a13">
 												<div class="tab-outline" data-bind="ntsKMK003A13: { 
+													selectedTab: selectedTab,
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -420,6 +425,7 @@
 											</div>
 											<div tabindex="155" class="tab-a14">
 												<div class="tab-outline" data-bind="ntsKMK003A14: {
+													selectedTab: selectedTab,
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -428,6 +434,7 @@
 											</div>
 											<div tabindex="158" class="tab-a15">
 												<div class="tab-outline" data-bind="ntsKMK003A15: {
+													selectedTab: selectedTab,
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
@@ -436,6 +443,7 @@
 											</div>
 											<div tabindex="165" class="tab-a16">
 												<div class="tab-outline" data-bind="ntsKMK003A16: {
+													selectedTab: selectedTab,
 													screenMode: tabMode,
 													model: mainSettingModel,
 													enum: settingEnum
