--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a12/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a12/index.xhtml
@@ -27,7 +27,7 @@
 						enable: true }"></div>
 			</div>				
 			<div class="tab-inline-item">
-				<div tabindex="151" class="cf" data-bind="ntsSwitchButton: {
+				<div tabindex="151" class="cf" data-bind="event: { keydown: changeTab }, ntsSwitchButton: {
 						name: '#[KMK003_171]',
 						options: listRoundingValue,
 						optionsValue: 'value',
