--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a14/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a14/index.xhtml
@@ -30,7 +30,7 @@
 	</div>
 	
 	<div class="tab-rows">
-		<div class="tab-14-radio" tabindex="157" data-bind="ntsRadioBoxGroup: {
+		<div class="tab-14-radio" tabindex="157" data-bind="event: { keydown: changeTab }, ntsRadioBoxGroup: {
 				name: '#[KMK003_189]',
 				options: lstNursingTimeEnum,
 				optionsValue: 'value',
