--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a4/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a4/index.xhtml
@@ -102,7 +102,7 @@
 						enable: true }"></div>
 			</div>	
 			<div class="tab-inline-item">
-				<div tabindex="67" class="cf" data-bind="ntsSwitchButton: {
+				<div tabindex="67" class="cf" data-bind="event: { keydown: changeTab }, ntsSwitchButton: {
 						options: stampRoundingOptions,
 						optionsValue: 'code',
 						optionsText: 'name',
