kmk003 fix rebind tab 3

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a3/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a3/index.xhtml
@@ -10,6 +10,7 @@
    	</com:ValidatorScript>
    	
    	<div>
+   	<com:ko tag="if" bind="rebind">
 	<com:ko tag="ifnot" bind="isFlexMode">
 	
 		<com:ko tag="ifnot" bind="isFlowMode">
@@ -186,6 +187,7 @@
 				</com:ko>
 			</com:ko>
 		</div>
+	</com:ko>
 	</com:ko>
 	</div>
 </ui:composition>
