update kaf010 css

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
@@ -128,7 +128,7 @@
 					<div class="cell valign-center">
 						<div>
 							<!--A4_9 勤務時間From1--> 							
-							<input tabindex="8" class="row-cell-margin right-content" id="inpStartTime1"
+							<input tabindex="8" class="row-cell-margin inputTime-kaf005 right-content" id="inpStartTime1"
 								data-bind="ntsTimeWithDayEditor: { name: '#[KAF005_333]', constraint:'TimeWithDayAttr',value: timeStart1, enable: true, readonly: false, required: true }" />
 							<!--A4_10 ~1--> 								
 							<label class="valign-center link-label-kaf005">#{i18n.getText('KAF005_38')}</label>
@@ -137,7 +137,7 @@
 					<div class="cell valign-center">
 						<div class="row-cell-margin">
 							<!--A4_11 勤務時間To1--> 							
-							<input tabindex="9" id="inpEndTime1" class  ="right-content"
+							<input tabindex="9" id="inpEndTime1" class  ="right-content inputTime-kaf005"
 								data-bind="ntsTimeWithDayEditor: {name: '#[KAF005_334]', constraint:'TimeWithDayAttr', value: timeEnd1, enable: true, readonly: false, required: true}" />
 						</div>
 					</div>
@@ -152,7 +152,7 @@
 					<div class="cell valign-center">
 						<div>
 							<!--A4_12 勤務時間From2--> 							
-							<input tabindex="10" class="row-cell-margin right-content" id="inpStartTime2"
+							<input tabindex="10" class="row-cell-margin inputTime-kaf005 right-content" id="inpStartTime2"
 								data-bind="ntsTimeWithDayEditor: {name: '#[KAF005_335]',constraint:'TimeWithDayAttr',value: timeStart2}" />
 							<!--A4_13 ~2--> 								
 							<label class="valign-center link-label-kaf005">#{i18n.getText('KAF005_39')}</label>
@@ -161,7 +161,7 @@
 					<div class="cell valign-center">
 						<div>
 							<!--A4_14 勤務時間To2--> 							
-							<input tabindex="11" class="row-cell-margin right-content" id="inpEndTime2"
+							<input tabindex="11" class="row-cell-margin inputTime-kaf005 right-content" id="inpEndTime2"
 								data-bind="ntsTimeWithDayEditor: {name: '#[KAF005_336]', constraint:'TimeWithDayAttr',value: timeEnd2}" />
 						</div>
 					</div>
