--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
@@ -129,7 +129,7 @@
 				<div class="cell valign-center">
 					<div>
 						<!--A4_9 勤務時間From1-->
-						<input tabindex="8" class="row-cell-margin right-content"
+						<input tabindex="8" class="row-cell-margin inputTime-kaf010 right-content"
 							id="inpStartTime1"
 							data-bind="ntsTimeWithDayEditor: { name: '#[KAF010_333]', constraint:'TimeWithDayAttr',value: timeStart1, enable: true, readonly: false, required: true }" />
 						<!--A4_10 ~1-->
@@ -139,7 +139,7 @@
 				<div class="cell valign-center">
 					<div class="row-cell-margin">
 						<!--A4_11 勤務時間To1-->
-						<input tabindex="9" id="inpEndTime1" class="right-content"
+						<input tabindex="9" id="inpEndTime1" class="right-content inputTime-kaf010"
 							data-bind="ntsTimeWithDayEditor: {name: '#[KAF010_334]', constraint:'TimeWithDayAttr', value: timeEnd1, enable: true, readonly: false, required: true}" />
 					</div>
 				</div>
@@ -197,7 +197,7 @@
 					<div class="cell valign-center">
 						<div>
 							<!--A4_12 勤務時間From2-->
-							<input tabindex="10" class="row-cell-margin right-content"
+							<input tabindex="10" class="row-cell-margin inputTime-kaf010 right-content"
 								id="inpStartTime2"
 								data-bind="ntsTimeWithDayEditor: {name: '#[KAF010_335]',constraint:'TimeWithDayAttr',value: timeStart2}" />
 							<!--A4_13 ~2-->
@@ -207,7 +207,7 @@
 					<div class="cell valign-center">
 						<div>
 							<!--A4_14 勤務時間To2-->
-							<input tabindex="11" class="row-cell-margin right-content"
+							<input tabindex="11" class="row-cell-margin inputTime-kaf010 right-content"
 								id="inpEndTime2"
 								data-bind="ntsTimeWithDayEditor: {name: '#[KAF010_336]', constraint:'TimeWithDayAttr',value: timeEnd2}" />
 						</div>
