--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/a/ccg013.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/a/ccg013.a.style.css
@@ -171,7 +171,7 @@ button.search-btn {
 }
 
 #menubar-tabs .menubar-container .title-menu .titlemenu-placeholder {
-	float: left;
+	display: inline-block;
 	height: 58px;
 	width: 134px;
 	border: 1px dashed #666;
