fix bug st kmk010

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/010/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/010/a/index.xhtml
@@ -23,11 +23,11 @@
 			</ui:define>
 	
 			<ui:define name="content">
-				<div id="functions-area">
-					<button tabindex="1" class="proceed" data-bind="click: saveOutsideOTSetting">#{i18n.getText('KMK010_4')}</button>
-					<button style="visibility: hidden;" tabindex="2" class="buttonOther" data-bind="click: exportFileExcelOutsideOTSetting">#{i18n.getText('KMK010_5')}</button>
-					<button tabindex="3" class="buttonOther" data-bind="click: openDialogOutsideOTSetting" >#{i18n.getText('KMK010_6')}</button>
-					<button tabindex="4" class="buttonOther" data-bind="click: openDialogOutsideOTBRDItem">#{i18n.getText('KMK010_7')}</button>
+				<div id="functions-area" >
+					<button tabindex="1" class="proceed float-left" data-bind="click: saveOutsideOTSetting">#{i18n.getText('KMK010_4')}</button>
+					<button style="visibility: hidden;" tabindex="2" class="buttonOther float-left" data-bind="click: exportFileExcelOutsideOTSetting">#{i18n.getText('KMK010_5')}</button>
+					<button tabindex="3" class="buttonOther float-left" data-bind="click: openDialogOutsideOTSetting" >#{i18n.getText('KMK010_6')}</button>
+					<button tabindex="4" class="buttonOther float-left" data-bind="click: openDialogOutsideOTBRDItem">#{i18n.getText('KMK010_7')}</button>
 					<div tabindex="5" id="switch-language"></div>
 				</div>
 				
