--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/010/a/kmk010.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/010/a/kmk010.a.main.css
@@ -69,6 +69,7 @@
 	float: left;
 	margin-left: 20px;
 	max-width: 30%;
+	margin-bottom: 10px;
 }
 
 .overtimeName {
@@ -117,7 +118,7 @@
 }
 
 .overtimeRate60H {
-	margin-left: 130px;
+	margin-left: 87px;
 	border-radius: 5px;
 	border-color: #565555;
 	border-width: 1px;
@@ -182,8 +183,8 @@
 }
 
 #switch-language {
-	float: right;
-	margin-right: 43%;
+	float: left;
+	margin-left: 32px;
 }
 
 .selectionVaction {
@@ -202,4 +203,10 @@
   padding: 5px;
   z-index: 120100;
   border-radius: 0px;
+}
+.float-left {
+	float: left;
+}
+#functions-area {
+	display: -webkit-box;
 }
