--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/demo.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/demo.xhtml
@@ -7,6 +7,7 @@
 <body>
 	<ui:composition template="../../../../master/base.xhtml">
 		<ui:define name="htmlHead">
+			<com:scriptfile path="../share/model.js" />
 			<com:scriptfile path="cmf001.f.start.js" />
 			<com:scriptfile path="cmf001.f.service.js" />
 			<com:scriptfile path="cmf001.f.vm.js" />
