--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/index.xhtml
@@ -6,6 +6,132 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
 	<ui:composition template="../../../../master/dialog.xhtml">
+		<ui:define name="htmlHead">
+			<script>
+				var dialogSize = {
+					width : 960,
+					height : 590
+				};
+			</script>
+			<com:scriptfile set="IGNITE" />
+			<com:scriptfile path="../share/model.js" />
+			<com:scriptfile path="cmf001.f.start.js" />
+			<com:scriptfile path="cmf001.f.service.js" />
+			<com:scriptfile path="cmf001.f.vm.js" />
+			<com:stylefile path="cmf001.f.style.css" />
+		</ui:define>
+		<ui:define name="content">
+			<div id="functions-area">
+				<button id="F1_1" class="proceed" tabindex="1">#{i18n.getText('CMF001_190')}</button>
+				<button id="F1_2" class="proceed" tabindex="2">#{i18n.getText('CMF001_191')}</button>
+				<button id="F1_3" data-bind="click: closeDialog" tabindex="3">#{i18n.getText('CMF001_192')}</button>
+				<button id="F1_4" class="danger push-right-4x" tabindex="4">#{i18n.getText('CMF001_193')}</button>
+			</div>
+			<div id="contents-area">
+				<div id="content">
+					<div id="content-left" class="bg-green">
+						<div
+							data-bind="ntsPanel:{width: '350px', height: '400px', direction: 'right', showIcon: true, visible: true}">
+							<div style="width: 422px"
+								data-bind="ntsSearchBox: {
+												searchMode: 'filter',
+												label: '#{i18n.getText('CMF001_194')}',
+												targetKey: 'dispConvertCode',
+												comId: 'F3_1',
+												items: convertItems,
+												selected: currentConvertCode,
+												selectedKey: 'dispConvertCode',
+												fields: ['dispConvertCode', 'dispConvertName'],
+												mode: 'igGrid'
+											}" tabindex="5"/>
+							<table id="F3_1"
+								data-bind="ntsGridList: {
+												dataSource: convertItems,
+												primaryKey: 'dispConvertCode' ,
+												columns: [
+															{headerText: '#{i18n.getText('CMF001_195')}', key: 'dispConvertCode', width: 80},
+							                				{headerText: '#{i18n.getText('CMF001_196')}', key: 'dispConvertName', width: 250}
+							                			],
+												multiple: false,
+												value: currentConvertCode ,
+												rows: 15,
+												showNumbering: true
+											}">
+							</table>
+						</div>
+
+					</div>
+					<div id="content-right">
+						<div class="div_line">
+							<div class="line_col_1">
+								<div class="float_left display_block"
+									data-bind="ntsFormLabel: { required:true }">#{i18n.getText('CMF001_197')}</div>
+							</div>
+							<div>
+								<input style="width: 30px"
+									data-bind="ntsTextEditor: {
+													value: convertCode,
+													constraint: 'ConvertCode',
+													required: true,
+													enable: true
+												}" tabindex="6"/>
+								<input
+									data-bind="ntsTextEditor: {
+													value: convertName,
+													constraint: 'ConvertName',
+													required: true,
+													enable: true
+												}" tabindex="7"/>
+							</div>
+						</div>
+						<div class="div_line">
+							<div class="float_left display_block"
+								data-bind="ntsFormLabel: { required:true }">#{i18n.getText('CMF001_200')}</div>
+						</div>
+						<div class="div_line">
+							<button  style="margin-left: 20px;" id="F4_5" data-bind="click: addDetail" tabindex="8">#{i18n.getText('CMF001_201')}</button>
+							<button id="F4_6" class="danger push-right-1x" data-bind="click: removeDetail" tabindex="9">#{i18n.getText('CMF001_202')}</button>
+						</div>
+						<div class="div_line">
+							<table id="fixed-table">
+								<colgroup>
+									<col width="35px" />
+									<col width="120px" />
+									<col width="150px" />
+								</colgroup>
+								<thead>
+									<tr>
+										<th class="ui-widget-header"></th>
+										<th class="ui-widget-header">#{i18n.getText('CMF001_203')}</th>
+										<th class="ui-widget-header">#{i18n.getText('CMF001_204')}</th>
+									</tr>
+								</thead>
+								<tbody data-bind="foreach: detailConvertItems">
+									<tr>
+										<td class="order-color"></td>
+										<td><input data-bind="ntsTextEditor: {value: outputItem, option: {width: '93px'}}" /></td>
+										<td><input data-bind="ntsTextEditor: {value: systemCode, option: {width: '123px'}}" /></td>
+									</tr>
+								</tbody>
+							</table>
+							
+						</div>
+						<div class="div_line">
+							<div data-bind="ntsFormLabel: {}">#{i18n.getText('CMF001_207')}</div>
+							<button>?</button>
+							<div class="cf"
+								data-bind="ntsSwitchButton: {
+														options: [{code: 0, name: '#{i18n.getText('CMF001_209')}'},
+																  {code: 1, name: '#{i18n.getText('CMF001_210')}'}],
+														optionsValue: 'code',
+														optionsText: 'name',
+														value: selectedSettingKbn,
+														enable: true }" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</ui:define>
 	</ui:composition>
 </body>
 </html>
