--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/base.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/base.xhtml
@@ -26,7 +26,7 @@
 			<span data-bind="text: infoSelect3" ></span>
 		</div>
 		
-		<div>
+		<div id="tableCommonMonth">
 			<!-- table month in year -->
 			<table>
 				<thead>
