--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/kmf002.c.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/kmf002.c.main.css
@@ -1,13 +1,13 @@
-#scrC table {
+#scrC #tableCommonMonth table {
 	border-collapse: collapse;
 }
 
-#scrC table th, #scrC table td{
+#scrC #tableCommonMonth table th, #scrC #tableCommonMonth table td{
 	border: 1px solid  black;
 	padding: 5px;
 }
 
-#scrC table td > span > input{
+#scrC #tableCommonMonth table td > span > input{
 	/* background-color:transparent;
     border: 0px solid; */
     text-align: center;
