fix bug 88012 kdw006

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/006/b/d/kdw006.d.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/006/b/d/kdw006.d.main.css
@@ -24,7 +24,11 @@
 	padding-left: 5px;
 }
 
-#checkBox21,#checkBox31{
+#checkBox21
+{
+width: 176px;
+}
+#checkBox31{
 width: 147px;
 }
 #checkBox41{
